--- a/src/components/mik-icon/mik-icon.css
+++ b/src/components/mik-icon/mik-icon.css
@@ -37,3 +37,8 @@
     vertical-align: middle;
     margin-right: 5px;
 }
+.mik-icon.large {
+    font-size: 21px;
+    margin-right: 3px;
+    vertical-align: middle;
+}
